[package]
name = "remarklib"
version = "0.2.0"
edition = "2021"
description = "Core of Remark the programming language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function_string_builder = "1.0.3"
regex = "1.10.2"
