[package]
name = "remarklib"
version = "0.3.0"
edition = "2021"
description = "The core of the Remark programming language"
license = "MIT"
homepage = "https://github.com/megahomyak/remarklib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function_string_builder = "1.0.3"
regex = "1.10.2"
